--- a/package.json
+++ b/package.json
@@ -2,33 +2,25 @@
   "name": "expressjs-postgres",
   "private": true,
   "version": "1.0.0",
-  "main": "dist/server.js",
+  "main": "dist/index.js",
   "author": "Jake Runzer",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.ts",
+    "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/index.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.13",
+    "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.11",
-    "@types/node": "^18.11.11",
     "@types/pg": "^7.14.9",
-    "dotenv": "^16.0.3",
     "nodemon": "^2.0.7",
-    "pg-hstore": "^2.3.4",
-    "ts-node": "^10.9.1",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
 }
