--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1"
   },
@@ -23,6 +24,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.11",
     "@types/pg": "^7.14.9",
     "dotenv": "^16.0.3",
