--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-oauth2-jwt-bearer": "^1.3.0",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1"
